frontend finished, unit tests remaining